# Cppfirstbasic

./: README.md  class diagrams
FunctionTemplate/: CMakeLists.txt
Qtqtesttut1/: CMakeLists.txt  Qtqtesttut1_en_AT.ts  main.cpp  mystring.cpp  mystring.h  udemypointerchallenge.cpp  udemypointerchallenge.h  udemytut1.cpp  udemytut1.h  udemytut2.cpp  udemytut2.h
Qtudemytutorial/: mystring.cpp  udemytut2.cpp
Qunittesttut1/: CMakeLists.txt  tst_qunittestfortut1.cpp  tst_testqunittest.cpp
TestQtqtesttut1/: CMakeLists.txt  tst_testqtqtesttut1.cpp
qtestsubproject/: CMakeLists.txt  mystringuml.qmodel  tst_qtestudemy.cpp
